# dev-box

./: .bandit  .eslintrc.js  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .prettierrc  ARCHITECTURE.md  CHANGES_FROM_ORIGINAL_PLAN.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPENDABOT_RESOLUTION.md  Dockerfile  FILE_TREE.md  FINAL_PROJECT_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  LIBVIRT-MIGRATION.md  LIBVIRT_MIGRATION_SUMMARY.md  LICENSE  MAINTAINERS.md  NETWORK_CONFIG_GUIDE.md  NETWORK_UPDATE_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_5_REPORT.md  PHASE_6_REPORT.md  PICKLE_FIX_RECOMMENDATIONS.md  PROJECT_PLAN.md  PROJECT_PLAN_V1.1.md  QUALITY_GATE_REPORT.md  README.md  README_PROJECT_PLANS.md  SANDBOX_INTEGRATION_SUMMARY.md  SECURITY.md  SECURITY_REMEDIATION_REPORT.md  SECURITY_SCAN_BASELINE.md  STYLE_CLEANUP_REPORT.md  STYLE_GUIDE.md  TARFILE_FIX_RECOMMENDATIONS.md  (+13 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: MIGRATION_SUMMARY.md  README.md  base-template-generator.md
.claude/helpers/: checkpoint-manager.sh  github-safe.js  github-setup.sh  setup-mcp.sh  standard-checkpoint-hooks.sh
.github/: CODEOWNERS  DEPENDABOT_IMPLEMENTATION_SUMMARY.md  DEPENDABOT_STRATEGY.md  dependabot-auto-merge.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: artifact-scan.yml  box-optimization.yml  build-docs.yml  dependency-review.yml  lighthouse.yml  multi-arch-build.yml  pages.yml  scorecard.yml  security.yml  vagrant-box-build.yml  vagrant-libvirt-test.yml
.llmconfig/prompt-templates/: README.md  commit_and_test_all_providers.md  commit_and_vagrant_smoke_test_prompt.md  create_and_smoke_test_fresh_vm.md  fresh_vm_kvm_fix_with_smoke_test.md  install_and_smoke_test_vm.md  provision_dev_toolchain.md  repeat_fresh_vm_test.md  security_report_fixer.md  use_vagrant_libvirt_fresh_vm.md
docs/: CNAME  DEVELOPER_GUIDE.md  LIBVIRT_MIGRATION.md  USER_GUIDE.md  _config.yml  ci-cd-pipeline.md  development-testing.md  index.html  troubleshooting-ci-cd.md
docs/dev-box-site/: .eleventy.js  .eleventyignore  .lighthouserc.json  README.md  eleventy.config.js  license-report.json  package-lock.json  package.json  sbom-github.spdx.json  sbom-syft.spdx.json
docs/security/: trivy-scanning-guide.md
guest/: __init__.py  agent.py
libvirt-enhanced/: Vagrantfile
memory/agents/: README.md
memory/sessions/: README.md
packer/: README.md  build-box.sh  ubuntu-24.04-libvirt.pkr.hcl  validate-box.sh  variables.pkrvars.hcl
packer/cloud-init/: meta-data  user-data
packer/scripts/: cleanup.sh  configure-vagrant.sh  install-dev-tools.sh  libvirt-optimizations.sh
sandbox-core/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  bandit-report-final.json  bandit-report.json  demo.py  requirements-security.txt  requirements.txt  security-report.json  security-validation-after-fixes.json  security_scan.py
sandbox-core/config/: default.yaml
sandbox-core/docs/: API_DOCUMENTATION.md
sandbox-core/tests/: test_core.py  test_security_fixes.py
scripts/: README-kvm-scripts.md  clean-vagrant-state.sh  complete-libvirt-migration.sh  execute-fresh-vm-test.sh  execute-libvirt-vm-test.sh  install-libvirt-dependencies.sh  kvm-unload.sh  manage-boxes.sh  provision-dev-toolchain.sh  security_fix_tarsafe.sh  setup-libvirt-box.sh  test-kvm-unload.sh  test-trivy-scanning.sh  validate-libvirt-setup.sh
src/: safe_extract.py  secure_serialization.py
src/agent_vm/: README.md  __init__.py
tests/: README.md  TEST_STRATEGY.md  conftest.py  github_actions_ci.yml  pytest.ini  requirements-test.txt  run_tests.py  test_project_structure.py
tests/e2e/: test_workflows.py
tests/integration/: README.md  conftest.py  setup_networks.sh  test_communication.py  test_sandbox_lifecycle.py  (+1 more)
vagrant-test-vm/: .gitignore  README.md  Vagrantfile
(+145 files in other folders)
